// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`size is 1 1`] = `
<div
  className="flex-100 layout-row layout-align-start"
>
  <h1
    className="text_style flex"
    style={
      Object {
        "color": "COLOR",
        "fontWeight": "normal",
      }
    }
  >
    TEXT
     
    <Component />
  </h1>
</div>
`;

exports[`size is 2 1`] = `
<div
  className="flex-100 layout-row layout-align-start"
>
  <h2
    className="text_style flex"
    style={
      Object {
        "color": "COLOR",
        "fontWeight": "normal",
      }
    }
  >
    TEXT
     
    <Component />
  </h2>
</div>
`;

exports[`size is 3 1`] = `
<div
  className="flex-100 layout-row layout-align-start"
>
  <h3
    className="text_style flex"
    style={
      Object {
        "color": "COLOR",
        "fontWeight": "normal",
      }
    }
  >
    TEXT
     
    <Component />
  </h3>
</div>
`;

exports[`size is 4 1`] = `
<div
  className="flex-100 layout-row layout-align-start"
>
  <h4
    className="text_style flex"
    style={
      Object {
        "color": "COLOR",
        "fontWeight": "normal",
      }
    }
  >
    TEXT
     
    <Component />
  </h4>
</div>
`;

exports[`size is greater than 4 1`] = `
<div
  className="flex-100 layout-row layout-align-start"
/>
`;
